AUpdated Jenkins file to add terraform init before destroy

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,6 +25,7 @@ pipeline {
                     equals expected: true, actual: params.destroy
             }
             steps {
+                sh label: '', script: 'terraform init'
                 sh label: '', script: 'terraform destroy -auto-approve '
             }
         }
